# Tigro

./: README.md  pyproject.toml  Назначение библиотеки.md
app/: contracts.py  core.py  decorators.py  matchers.py
app/shared/: schemas.py
app/transport/: rabbit_bus.py
shared/: __init__.py  schemas.py
tests/: test_router.py
tigro/: __init__.py  contracts.py  core.py  decorators.py  discovery.py  keyboard.py  matchers.py  modules.py  schemas.py
tigro/gateway/: __init__.py  aiogram_gateway.py  base.py  rpc.py
tigro/renderers/: __init__.py
tigro/transport/: __init__.py  rabbit_bus.py
